[gd_scene load_steps=4 format=3 uid="uid://br88n0tckd55t"]

[ext_resource type="Theme" uid="uid://cqyvw8e6h0gt3" path="res://resources/ui_theme.tres" id="1_qupih"]
[ext_resource type="Script" path="res://scenes/solution_menu.gd" id="2_l0gye"]
[ext_resource type="PackedScene" uid="uid://dxu64ad742ahl" path="res://scenes/game_board/board.tscn" id="3_hwupn"]

[node name="SolutionMenu" type="Control"]
layout_mode = 3
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qupih")
script = ExtResource("2_l0gye")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Solution"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BoardHolder" type="Control" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="Board" parent="MarginContainer/VBoxContainer/BoardHolder" instance=ExtResource("3_hwupn")]
unique_name_in_owner = true
layout_mode = 0
enable_interaction = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Back"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="resized" from="MarginContainer/VBoxContainer/BoardHolder" to="." method="_on_board_holder_resized"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
